--- a/src/SideBar.css
+++ b/src/SideBar.css
@@ -11,12 +11,12 @@
 width: inherit;
 height:350px ;
 position: relative;
-top:100px;
+top:150px;
 text-align: center;
 display: flex;
 z-index: 999;
 flex-direction: column;
-
+justify-content: center;
 
 }
 
@@ -27,7 +27,7 @@ padding-top: 10px;
 margin-top: 10px;
 user-select: none;
 cursor: pointer;
-
+transition: .3s all ease;
 }
 
 .sideBarTab li:before{
@@ -42,11 +42,15 @@ cursor: pointer;
     transition: .6s all ease;
 }
 .sideBarTab li:hover::before{
-    width:100px;
+    width:150px;
     left:100%;
+    
 }
 
-
+.sideBarTab li:hover{
+    font-weight: 888;
+    color:#0c3f71;
+}
 
 
 .ri-sun-foggy-line{
@@ -112,7 +116,7 @@ background-color: azure;
 }
 .night{
     background-color: black;
-    z-index: 999;
+    z-index:3000;
     height: 100%;
     width:1600px;
     transition: 1s all ease;
@@ -122,7 +126,7 @@ background-color: azure;
 .white{
     background-color: rgb(250, 248, 248);
     height: 100%;
-    z-index: 999;
+    z-index:3000;
     width: 1600px;
     transition: 1s all ease;
     position: fixed;
@@ -166,13 +170,21 @@ border-radius: 10px;
     margin: 7px auto;
     border-radius: 10px;
     }
-
-
-
-
-
-
-
+i{
+    position: relative;
+    top:3px;
+    left:10px;
+    transition: .2s all ease;
+}
+i:hover{
+    font-size: 2.5rem;
+    color: blueviolet;
+    font-weight: 777;
+}
+.contact{
+    text-decoration: none;
+    color:black;
+}
 
 
 
@@ -185,13 +197,10 @@ border-radius: 10px;
 
 @media (max-width:400px) {
     
-body{
-    height: 3000px;
-}
 
 .burger{
-    height: 70px;
-    width: 90px;
+    height: 60px;
+    width: 80px;
     border: 1px solid blue;
     display: flex;
     flex-direction: column;
@@ -199,46 +208,44 @@ body{
     justify-content: center;
     align-items: center;
     position: absolute;
-    left:280px;
-    z-index: 888;
+    left:300px;
+    z-index:2500;
+    top:10px;
     display: block;
+    transition: .3s all ease;
 
 }
+.burger:hover{
+    height: 70px;
+    width: 90px;
 
+
+}
 .one{
    
-    height: 10px;
-    width: 80px;
-    margin: 10px auto;
-  transition: .4s all ease;
+    height: 9px;
+    width: 70px;
+    margin: 9px auto;
+  transition: .2s all ease;
     }
     
     .two{
         
-        height: 10px;
-        width: 80px;
-        margin: 10px auto;
+        height: 9px;
+        width: 70px;
+        margin: 9px auto;
         transition: .4s all ease;
         }
     
     .three{
  
-        height: 10px;
-        width: 80px;
-        margin: 10px auto;
+        height: 9px;
+        width: 70px;
+        margin: 9px auto;
         transition: .4s all ease;
         }
 
-.sideBar{
-    width:400px;
-    transition: .5s all ease;
-    left:-500px
 
-}
-
-.sideBarMove{
-    left:0px;
-}
 .oneActive{
 transform: rotate(45deg) translateY(15px) translateX(10px);
 
@@ -248,31 +255,35 @@ background-color: transparent;
 transform: translateX(-300px);
 }
 .threeActive{
-transform: rotate(-45deg) translateY(-20px) translateX(10px);
-}
-
-.sideBarTab li:before{
-    content: "";
-    position:absolute;
-    background-color: aqua;
-    height: 5px;
-    left:0;
-    width: 0;
-    margin-top: 50px;
-    margin-left: -250px;
-    transition: .6s all ease;
-}
-.sideBarTab li:hover::before{
-    width:100px;
-    left:100%;
+transform: rotate(-45deg) translateY(-19px) translateX(9px);
 }
 
 
+.sideBar{
+    left:-300px;
+    transition:.3s all ease;
+    z-index: 2000;
+}
 
+.move{
+    left:-10px;
+}
+.lightDark{
+    background-color: rgb(134, 122, 122);
+    height: 1000px ;
+    width:1000px;
+    z-index:-100;
+}
+.lightWhite{
 
+width: 1000px;
+height: 1000px;
+z-index:-100;
+}
 
-
-
+.sideBarTab{
+    top:100px;
+}
 
 
 
