--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,22 +1,24 @@
 .aboutCon{
-    height: 500px;
-    background-color: antiquewhite;
+ height: 500px;
+  
     top:-1500px;
     position: relative;
     width:1200px;
     left:310px;
 transition: 1s all ease;
-z-index: 700;
+
+overflow-y: scroll;
 }
 .aboutDown{
-    height: 500px;
-    background-color: antiquewhite;
-    top:-300px;
+height: 500px;
+
+    top:70px;
     position: relative;
     width:1200px;
     left:310px;
 transition: 1s all ease;
-z-index: 700;
+
+
 }
 
 
@@ -27,18 +29,30 @@ z-index: 700;
 }
 
 
+.allInfo{
+    display: flex;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media (max-width:400px) {
-    .aboutCon,.aboutDown{
+    .aboutCon{
 width: 350px;
 margin-left:-300px;
-margin-top:-250px;
-height: 100%;
+margin-top:-500px;
+height:300px;
     }
-
-
-
-
 
 
 
