--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,5 +1,5 @@
 .homeCon{
-display: flex;
+
 position: relative;
 
 left:400px;
@@ -7,17 +7,48 @@ top:-1000px;
 transition: 1s all ease;
 
 }
-.homeDown{
-    top:100px;
-    display: flex;
-position: relative;
-
-left:400px;
-
-
-transition: 1s all ease;
+video{
+    position:absolute;
+    height:100%;
+    width: 100%;
+    z-index:888
 }
 
+.homeImgCon{
+   
+    position: absolute;
+    width: 100%;
+    height:100%;
+ 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-repeat:no-repeat;
+background-size:1500px;
+
+}
+
+@keyframes boat {
+  
+    0%{
+        background-position-x:0px;
+    }
+100%{
+    background-position-x:1500px;
+}
+
+}
+
+.homeDown{
+    top:5px;
+position:fixed;
+left:310px;
+height: 700px;
+width:1200px;
+transition: 1s all ease;
+
+
+}
 
 
 .homeContent{
@@ -86,23 +117,46 @@ font-weight: 666;
 color:goldenrod
 }
 
-    .homeCon,.homeDown{
+    .homeCon{
 width:400px;
 position: relative;
-left:-10px;
+left:100px;
 display:flex;
 margin-top: -100px;
 flex-direction: column;
     }
-p{
-    width: 350px;
+
+.homeDown{
+    position: relative;
+    width:400px;
+ overflow-y: hidden;
+    left:-20px;
+    top:100px;
+    display: flex;
+   justify-content:center;
+   align-items: center;
 }
 
+
+
+
+
+
+
+ .homeContent    p{
+    width: 400px;
+}
+.homeImgCon{
+    width:400px;
+    height:700px;
+    display: flex;
+    flex-direction: column;
+}
 .myImgCon{
     width:280px;
     height: 280px;
     margin-top: 30px;
-    margin-left: 70px;
+    margin-left: 20px;
     display: flex;
    justify-content: center;
    align-items: center;
@@ -114,7 +168,7 @@ p{
 }
 
 .homeContent{
-    margin-left: 20px;
+    margin-left: 250px;
     margin-top:20px ;
 }
 
@@ -133,7 +187,7 @@ text-align: center;
 padding: 10px;
 
 }
-@keyframes animation {
+@keyframes colorblue {
     100%{
         filter:hue-rotate(360deg);
     }
