--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -1,34 +1,428 @@
 .serviceCon{
-    height: 500px;
+   
     background-color: rgb(2, 210, 252);
-    position: relative;
+    position: absolute;
     width:1200px;
 transition: 1s all ease;
-left:320px;
+left:310px;
+
+position: absolute;
+top:10px;
 opacity: 0;
 }
 
-
 .serviceLeft{
-    height: 500px;
-    background-color: rgb(2, 227, 252);
-    position: relative;
+ 
+    position: absolute;
     width:1200px;
 transition: 1s all ease;
-top:-1300px;
-opacity: 1;
-
-left:320px;
+left:310px;
+top:10px;
+opacity:1;
 }
 
 
-@media (max-width:400px){
+.item{
+    width: 380px;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 40px 14px;
+overflow: hidden;
+ border-radius: 20px;
 
-.serviceCon,.serviceLeft{
-    height: 700px;
+}
+
+
+
+.gridCon{
+    margin:0 auto;
+}
+
+
+.item .firstRowImg{
+  width:390px;
+  height:300px;
+  position: relative;
+  left:-40px;
+transition: .4s all ease;
+}
+
+.secondRowImg{
+    width:390px;
+    height:300px;
+    position: relative;
+    left:-100px;
+  transition: .4s all ease;
+}
+
+
+.thirdRowImg{
+    width:390px;
+    height:300px;
+    position: relative;
+    left:-190px;
+  transition: .4s all ease;
+}
+
+
+
+
+
+
+
+.item .firstRowP{
+ left:200px;
+ position: absolute;
+    height: 200px;
+    width:350px;
+ color:transparent;
+    font-size: 1.4rem;
+    transition: .3s all ease;
+font-weight: 999;
+}
+
+.item:hover .firstRowP{
+    left:-10px;
+    color:blue;
+
+}
+
+
+.item:hover .firstRowImg {
+opacity: 0;
+}
+
+/*secondP*/
+.item .secondRowP{
+    position: absolute;
+    height: 200px;
+    width:350px;
+top:-300px;
+    font-size: 1.4rem;
+    transition: .5s all ease;
+    font-weight: 888;
+    
+}
+.item:hover .secondRowP{
+color:red;
+top:50px;
+}
+
+/*thirdP*/
+
+.item .thirdRowP{
+    position: absolute;
+    height: 200px;
+    width:350px;
+   right: -400px;
+    font-size: 1.4rem;
+    font-weight: 888;
+    transition: .3s all ease;
+}
+.item:hover .thirdRowP{
+color:gray;
+right:40px;
+}
+
+/*lastrow*/
+.item  .lastRowP{
+    position: absolute;
+    height: 200px;
+    width:350px;
+  top:700px;
+  color:transparent;
+    font-size: 1.4rem;
+    font-weight: 888;
+    transition: .4s all ease;
+}
+.item .fourthRowImg{
+    width:390px;
+    height:300px;
+    position: relative;
+    left:-190px;
+  transition: .4s all ease;
+}
+
+.fifthRowImg{
+    width:390px;
+    height:300px;
+    position: relative;
+    left:-130px;
+  transition: .4s all ease;
+}
+
+.sixthRowImg{
+    width:390px;
+    height:300px;
+    position: relative;
+    left:-110px;
+  transition: .4s all ease;
+}
+
+
+
+
+.item:hover .secondRowImg{
+    opacity: 0;
+}
+
+.item:hover .thirdRowImg{
+    opacity: 0;
+}
+
+
+.item:hover .fifthRowImg{
+top:-300px;
+}
+.item:hover .sixthRowImg{
+top:-300px;
+}
+
+
+
+
+
+
+
+
+
+
+
+.item:hover .lastRowP{
+    color:chartreuse;
+top:400px;
+
+}
+
+.item:hover .fourthRowImg{
+    top:-300px;
+    
+}
+
+
+
+/*icon*/
+
+
+
+.software{
+    font-size:6rem;
+color:green;
+position: relative;
+transition:.4s all ease;
+z-index: 999;
+left:-30px;
+top:-10px;
+
+}
+
+ .app{
+     position: absolute;
+     left:-100px;
+     transition: .4s all ease;
+ }
+
+
+.item:hover .app{
+left:100px;
+}
+
+.item:hover .software{
+    left:80px;
+}
+
+.web,.noti{
+    top:-300px;
+}
+.web{
+    position: relative;
+    left:200px;
+}
+
+.noti{
+    position: relative;
+    font-size: 6rem;
+    left:200px;
+    color:greenyellow
+}
+
+
+.item:hover .web,.noti{
+    background:linear-gradient(to right,red, green);
+    top:40px;
+}
+
+
+.appDev,.push{
+    position: relative;
+    left:300px;
+    transition: .4s all ease;
+}
+
+
+
+
+
+
+.item:hover .appDev{
+left:200px;
+}
+.item:hover .push{
+    left:200px;
+}
+
+
+
+
+.webDev,.codeBadge,.advert,.codePen,.creative,.grCode{
+position: relative;
+left:200px;
+bottom:-300px;
+transition:.3s all ease
+}
+
+
+
+
+.item:hover .webDev,.codeBadge,.advert,.codePen,.creative,.grCode {
+bottom: -10px;
+}
+
+
+
+
+.push{
+    font-size: 6rem;
+    position: relative;
+    left:300px;
+    color:red;
+    font-weight: 555;
+    }
+
+
+    .codeBadge{
+        font-size: 6rem;
+        color:red;
+    font-weight: 555;
+    }
+
+
+
+
+.codePen{
+    font-size: 6rem;
+    color:red;
+font-weight: 555;
+}
+
+.grCode{
+   font-size:6rem;
+   background: linear-gradient(to right,yellow,yellowGreen);
+   border-radius:50%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width:400px) {
+
+.serviceCon{
+   
     width: 370px;
     margin-left: -310px;
-    margin-top: -200px;
+  position: relative;
+  
+}
+.serviceLeft{
+   top:1000px;
+    width: 370px;
+    margin-left: -280px;
+   position: relative;
+  
+}
+
+
+
+.item{
+    width: 300px;
+    height: 300px;
+}
+p{
+    font-size: 1.4rem;
+   max-width:200px;
+}
+.item img{
+    width: 250px;
+    height: 250px;
+}
+.firstItem:hover .firstRowP{
+display: flex;
+align-items: center;
+justify-content: center;
+margin-bottom: 150px;
+margin-left: 70px;
+}
+.item .secondRowImg{
+    width:350px;
+    height:300px ;
+}
+.item .thirdRowImg{
+width:400px;
+height: 350px;
+}
+
+.item .fifthRowImg{
+    width:380px;
+height: 300px;
+}
+.item .sixthRowImg{
+    width:380px;
+height: 300px;
+}
+
+.secondItem:hover .secondRowP{
+    top:440px;
+}
+
+.thirdItem:hover .thirdRowP{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 70px;
+    margin-bottom:150px ;
+
+}
+
+
+
+
+
+
 }
 
 
@@ -37,5 +431,16 @@ left:320px;
 
 
 
-}
+
+
+
+
+
+
+
+
+
+
+
+
 
